tests/machine/x/ocaml/left_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/left_join.ml", line 35, characters 6-15:
35 |     ) customers;
           ^^^^^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 35):
  33 |         __res0 := { orderId = Obj.obj (List.assoc "id" o); customer = c; total = Obj.obj (List.assoc "total" o) } :: !__res0;
  34 |         matched := true)
  35 |     ) customers;
  36 |     if not !matched then (
  37 |       let c = Obj.magic () in
